# flowg

./: .dockerignore  .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  Taskfile.yml  VERSION.txt  go.mod  go.sum
tests/: .gitignore  .pdm-python  flowg.sh  pyproject.toml  start_flowg.sh
tests/benchmark/: .gitignore  generate-logs.py  requirements.txt  run.sh  testdata.toml
tests/config/: mockserver-config.json
tests/config/dns/: dns-client.dockerfile  dns-management-router.sh  dns-management-server.sh  dns-management-shell.sh  dns.dockerfile  flowg-dns.dockerfile  management-service
tests/e2e/: .gitignore  run.sh
tests/e2e/api/: .gitignore  run.sh
tests/e2e/benchmark/: stress.hurl
tests/e2e/integration/: acl_roles.hurl  acl_tokens.hurl  acl_users.hurl  alerts.hurl  auth.hurl  permissions.hurl  pipelines.hurl  retention.hurl  streams.hurl  transformers.hurl
tests/e2e/spec/: acl_users.hurl  retention.hurl  transformers.hurl
tests/e2e/specs/: auth.hurl  monitoring.hurl  streams.hurl
tests/e2e/web/: .gitignore  requirements.txt  run.sh
tests/specs/api/: acl_roles.hurl  acl_tokens.hurl  acl_users.hurl  auth.hurl  backup.hurl  cluster.hurl  forwarder_awscloudwatch.hurl  forwarder_azuremonitor.hurl  forwarder_cloudwatch.hurl  forwarder_googlecloudlog.hurl  forwarder_http.hurl  forwarder_otlp.hurl  forwarder_splunk.hurl  forwarders.hurl  forwarders_splunk.hurl  indexing.hurl  ingest_logs_otlp.hurl  ingest_logs_struct.hurl  ingest_logs_text.hurl  ingest_otlp.hurl  middleware_elastic.hurl  (+9 more)
tests/src/: conftest.py  settings.py
(+2072 files in other folders)
