[package]
name = "flowg-vrl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
# Size optimizations:
lto = true         # remove unused monomorphizations across the whole VRL dependency tree
codegen-units = 1  # improves both size and runtime performance
panic = "abort"    # drops unwinding landing pads (panics across the C FFI boundary abort anyway since Rust 1.71)

[build-dependencies]
cc = "1.2"

[dependencies]
vrl = "0.34.0"
anyhow = "1.0"
ariadne = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
